# advertisments_test_project

./: .gitignore  README.md  pyproject.toml
api/: advertisment_service.py  app.py  data.py  models.py  validation.py
